短视频功能上线

--- a/demo.html
+++ b/demo.html
@@ -39,5 +39,6 @@
     <img src="images/image13.jfif" title="圣诞老人"><br />
 
     <p>更多内容可以<a href="http://www.baidu.com" target="_blank">百度一下</a></p>
+    <p>短视频</p>
 </body>
 </html>
