语音功能上线

--- a/demo.html
+++ b/demo.html
@@ -41,5 +41,6 @@
     <p>更多内容可以<a href="http://www.baidu.com" target="_blank">百度一下</a></p>
     <p>短视频</p>
     <p>星星点灯</p>
+    <p>语音功能</p>
 </body>
 </html>
